Change names to the classes

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Chatarin's portfolio website created using React to showcase all the acheivements and front-end development skills."
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property=”og:title” content="Portfolio website for Chatarin." />
+    <meta property=”og:url” content=”https://imaginative-cactus-5daef6.netlify.app/” />
+    <meta property=”og:type” content=”website” />
+    <meta property=”og:description” content="Chatarin's portfolio website created using React to showcase all the acheivements and front-end development skills."/>
+
+    <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Chatarin's Portfolio Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
