--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property=”og:description” content="Chatarin's portfolio website created using React to showcase all the acheivements and front-end development skills."/>
 
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
